# OpenShell

./: CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.claude/agents/: arch-doc-writer.md  principal-engineer-reviewer.md
.github/: VOUCHED.td
.github/workflows/: acceptance-test.yml  checks.yml  docker-build.yml  e2e.yml  publish.yml  release-canary.yml
.opencode/agents/: arch-doc-writer.md  principal-engineer-reviewer.md
architecture/: build-containers.md  sandbox-connect.md  sandbox-custom-containers.md  security-policy.md
crates/navigator-cli/: Cargo.toml  build.rs
crates/navigator-gateway/: Cargo.toml  build.rs
crates/navigator-gateway/src/: context.rs  error.rs  ffi.rs  lib.rs
crates/openshell-core/: Cargo.toml
deploy/docker/: Dockerfile.cluster  Dockerfile.images  Dockerfile.server  cluster-entrypoint.sh  cluster-healthcheck.sh  cross-build.sh
deploy/gateway/: vm-init.sh
docs/: index.md  troubleshooting.md
docs/inference/: configure-routes.md  index.md
docs/reference/: architecture.md  cli.md  support-matrix.md
docs/safety-and-privacy/: index.md  network-access-rules.md  policies.md
docs/sandboxes/: community-sandboxes.md  create-and-manage.md  gateways.md  index.md  policies.md  providers.md
docs/tutorials/: github-sandbox.md  run-claude.md  run-openclaw.md  run-opencode.md
e2e/install/: sh_test.sh
e2e/python/: test_sandbox_policy.py
pr-preview/pr-160/: index.html  objects.inv  search.html  searchindex.js  troubleshooting.html
pr-preview/pr-214/: index.html  objects.inv  (+1 more)
proto/: sandbox.proto
tasks/: sbom.toml
(+336 files in other folders)
