[package]
name = "navigator-gateway"
description = "MicroVM gateway using libkrun for hardware-isolated process execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "0.2"
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
